# TrainingsTracker

./: README.md
Code/: README.md
Code/Client/Feedback/: feedback.cpp  feedback.h
Code/Client/Trainingsplan-Client/: Triansplan.cpp
Code/Client/source/: user.cpp  user.h
Code/Server/: .env  docker-compose.yml
Code/Server/API_Code/: .gitignore  API_Code.cbp  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
Code/Server/API_Code/.cmake/api/v1/reply/: cache-v2-682c1e73d2c44db91af9.json  cmakeFiles-v1-563be9bd5cbf237cdbfc.json  codemodel-v2-c75602b672741033dfce.json  index-2022-06-15T07-38-41-0938.json  target-API_Code-Debug-2aa80c3bf508feabb6b2.json
Code/Server/API_Code/source/: main.cpp
Code/Server/API_Code/source/controller/database/: DBConnector.cpp  DBConnector.h  ExerciseDBController.cpp  ExerciseDBController.h  ProductDBController.cpp  ProductDBController.h  TableCreator.cpp  TableCreator.h  UsersDBController.cpp  UsersDBController.h  WorkoutroutineDBController.cpp  WorkoutroutineDBController.h
Code/Server/API_Code/source/controller/request/: APIBasicController.cpp  APIBasicController.h  AuthenticationRequestController.cpp  AuthenticationRequestController.h  Controllers.h  ExerciseRequestController.cpp  ExerciseRequestController.h  ProductRequestController.cpp  ProductRequestController.h  RequestController.cpp  RequestController.h  UsersRequestController.cpp  UsersRequestController.h  WorkoutroutineRequestController.cpp  WorkoutroutineRequestController.h
Code/Server/API_Code/source/foundation/: basic_controller.cpp  network_utils.cpp
Code/Server/API_Code/source/foundation/include/: basic_controller.hpp  controller.hpp  network_utils.hpp  runtime_utils.hpp  usr_interrupt_handler.hpp
Code/Server/API_Code/source/models/: ExerciseModel.h  ProductModel.h  UserModel.h  WorkoutroutineModel.h
Code/Server/API_Code/source/utils/: Authentication.cpp  Authentication.h
Code/Server/DB/: Dockerfile  initDB.sql
Code/Server/OpenAPI/: api-doc.html  openApi.yaml
Code/Server/ProjectVorstellungServer/: api-doc.html  index.html
Code/Trainingstracker UI (Trainingsplan)/Binarys/: Trainingstracker
Code/Trainingstracker UI (Trainingsplan)/Trainingstracker/: CMakeLists.txt  Trainingsplan.h  Trainingstracker.pro  Trainingstracker.pro.shared  UebungClass.cpp  UebungHead.h  ausdaueruebparameter.cpp  ausdaueruebparameter.h  ausdaueruebparameter.ui  body.cpp  body.h  body.ui  kraftuebparameter.cpp  kraftuebparameter.h  kraftuebparameter.ui  liste_ausdauer.cpp  liste_ausdauer.h  liste_ausdauer.ui  liste_kraft.cpp  liste_kraft.h  liste_kraft.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  neuestraining.cpp  neuestraining.h  neuestraining.ui  resource.qrc  training.cpp  training.h  training.ui  uebung.cpp  uebung.h  uebung.ui  uebungsart.cpp  uebungsart.h  uebungsart.ui  (+8 more)
Code/Trainingstracker UI (Trainingsplan)/build-Trainingstracker-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Trainingstracker.Debug  object_script.Trainingstracker.Release  ui_ausdaueruebparameter.h  ui_body.h  ui_kraftuebparameter.h  ui_liste_ausdauer.h  ui_liste_kraft.h  ui_mainwindow.h  ui_menu.h  ui_neuestraining.h  ui_training.h  ui_uebungsart.h
Code/Trainingstracker UI (Trainingsplan)/build-Trainingstracker-Desktop_Qt_6_3_0_GCC_64bit-Debug/: Makefile  moc_ausdaueruebparameter.cpp  moc_body.cpp  moc_kraftuebparameter.cpp  moc_liste_ausdauer.cpp  moc_liste_kraft.cpp  moc_mainwindow.cpp  moc_menu.cpp  moc_neuestraining.cpp  moc_training.cpp  moc_uebungsart.cpp  ui_ausdaueruebparameter.h  ui_body.h  ui_kraftuebparameter.h  ui_mainwindow.h  ui_menu.h  ui_neuestraining.h  ui_training.h  ui_uebungsart.h
Code/Trainingstracker UI (Trainingsplan)/build-Trainingstracker-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_ausdaueruebparameter.h  ui_body.h  ui_kraftuebparameter.h  ui_liste_ausdauer.h  ui_liste_kraft.h  ui_menu.h  ui_training.h  ui_uebung.h  ui_uebungsliste.h  ui_uebungsliste_ausdauer.h  ui_uebungsliste_kraft.h
Documentation/: Projectmonitoring.docx
Documentation/Architecture/: Arcitecture.docx
Documentation/Backend/API/: api_dokumentation.aux  api_dokumentation.fdb_latexmk  api_dokumentation.fls  api_dokumentation.out  api_dokumentation.tex
Documentation/Old/Klassendiagramm/: README.md
Documentation/Old/Projectplan/: Architektur.odt  Projektplan.odt  Testtabellen.odt
Documentation/Old/Zeiterfassung/: Timothy.odt  Zeitpool-aktuell.xlsx
Documentation/Presentations/: Alghazzawi.pptx  MS2_Presentation.pptx  MS3_Projektprasentation.pptx
Documentation/Projectplan/: Projectplan.docx  Qualitätsmanagement.odt  Testplan.odt
Documentation/Specification/: Specifications.odt
Documentation/Specifications/: Specifications.docx
Documentation/Timetracking/: Timetracking.xlsx
Documentation/Zeiterfassung/: Badee.odt  Jeremias.odt  Killian.odt  README.md  Zeitpool.xlsx
(+809 files in other folders)
